--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
 	// "48": "icons/icon48.png"
     },
     "manifest_version": 2,
-    "name": "ChromeClock",
+    "name": "时间",
     "options_page": "options.html",
     "permissions": [
 	"notifications",
